# bigint

./: CMakeLists.txt  README.md  install.sh
include/: big_integer.hpp  big_unsigned.hpp
test/: CMakeLists.txt  big_integer.cpp  big_unsigned.cpp
